# OpenCV-Features-Comparison

./: AKAZE.cpp  CMakeLists.txt  LICENSE.md  akaze_features.cpp  kaze.cpp  kaze.h  kaze_config.cpp  kaze_config.h  kaze_features.h  kaze_ipoint.h  kaze_utils.h  main.cpp
result-20140104/: CMakeCache.txt  HomographyError.txt  MatchingRatio.txt  MeanDistance.txt  PercentOfCorrectMatches.txt  PercentOfMatches.txt  Performance.txt  result.xlsx
